# copilot-1

./: .gitmodules  Array.hs  cabal.project
copilot/: CHANGELOG  README.md  copilot.cabal
copilot-bluespec/: CHANGELOG  DESIGN.md  README.md  copilot-bluespec.cabal
copilot-bluespec/examples/fibs/: Makefile  Top.bs  fibs.hs
copilot-bluespec/examples/floating_point_issue/: BluespecFP.bsv  Floats.bs  FloatsTypes.bs  Makefile  Top.bs  bs_fp.c
copilot-bluespec/examples/special_floats/: Makefile  Top.bs  special_floats.hs
copilot-bluespec/src/Copilot/Compile/Bluespec/: CodeGen.hs  Compile.hs  Expr.hs  External.hs  Name.hs  Representation.hs  Settings.hs  Translate.hs  Type.hs  Util.hs
copilot-bluespec/src/Copilot/Core/: Extra.hs
copilot-bluespec/tests/Test/Copilot/Compile/: Bluespec.hs
copilot-c99/: CHANGELOG
copilot-c99/src/Copilot/Compile/C99/: CodeGen.hs  Compile.hs  Error.hs  Expr.hs  External.hs  Settings.hs  Translate.hs  Util.hs
copilot-c99/src/Copilot/Compile/C99/Compile/: Internal.hs
copilot-c99/src/Copilot/Compile/C99/Settings/: Internal.hs
copilot-c99/tests/Test/Copilot/Compile/: C99.hs
copilot-core/: CHANGELOG
copilot-core/src/Copilot/Core/: Operators.hs  Spec.hs  Type.hs
copilot-interpreter/src/Copilot/Interpret/: Eval.hs
copilot-interpreter/tests/Test/Copilot/Interpret/: Eval.hs
copilot-language/: CHANGELOG  copilot-language.cabal
copilot-language/src/Copilot/Language/: Analyze.hs  Reify.hs  Spec.hs  Stream.hs
copilot-language/src/Copilot/Language/Operators/: Array.hs  BitWise.hs  Projection.hs  Struct.hs
copilot-prettyprinter/: CHANGELOG
copilot-prettyprinter/src/Copilot/: PrettyPrint.hs
copilot-theorem/: CHANGELOG  copilot-theorem.cabal
copilot-theorem/src/Copilot/Theorem/: What4.hs
copilot-theorem/src/Copilot/Theorem/Kind2/: Output.hs  Prover.hs  Translate.hs
copilot-theorem/src/Copilot/Theorem/TransSys/: PrettyPrint.hs  Spec.hs  Translate.hs
copilot-theorem/src/Copilot/Theorem/What4/: Translate.hs
copilot-theorem/tests/Test/Copilot/Theorem/: What4.hs
copilot/examples/: Structs.hs  StructsUpdateField.hs
copilot/examples/what4/: Structs.hs
copilot/src/Language/: Copilot.hs
